debut de mis en place des fonctionalité

--- a/index.html
+++ b/index.html
@@ -423,5 +423,6 @@
             </footer>
         </main>
         <script src="Scripts/main.js"></script>
+        <script src="Scripts/acceuil.js"></script>
     </body>
 </html>
